tests/snapshots/tui_snapshot__tui_wrapped_message.snap
---
source: tests/tui_snapshot.rs
expression: view
---
]0;Pi · Dummy Model · ready  Pi (Dummy Model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: pr...
  resources: 0 skills, 0 prompts, 0 themes, 0 e...


  Assistant:

    This is a longer assistant response that
    should wrap across multiple lines.

  Enter: send  Shift+Enter: ne...  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  󰚩 Dummy Model / ACT / ctx: 0%
  Tokens: 0 in / 0 out  |  Persist: balanced  |...
